<resources>
    <!-- NOMBRE DE LOS BOTONES -->
    <string name="boton_login">Iniciar Sesión</string>
    <string name="boton_registro">Resgistrarse</string>
    <string name="boton_recordar_pass">Recuperar Contraseña</string>

    <!-- TEXTO DE ERRORES -->
    <string name="errorCampoVacio">El texto no puede estar vacio</string>
    <string name="errorValidacionEmail">Por favor, introduzca un formato de email correcto</string>
    <string name="errorUsPass">Usuario y/o contraseña incorrecto</string>
    <string name="errorConectionDB">No se ha podido conectar con la base de datos</string>
    <string name="errorPass">La contraseña no coincide</string>
    <string name="errorUsExistente">Ya existe un usuario con ese e-mail</string>
    <string name="errorEmail">No existe este Email</string>

    <!-- TITUOS DE LOS CAMPOS -->
    <string name="title_registro"><u>Resgistrarse</u></string>
    <string name="title_password">Contraseña</string>
    <string name="title_pass_repeat">Repetir Contraseña</string>
    <string name="title_usuario">E-mail</string>
    <string name="title_login"><u>Iniciar Sesión</u></string>
    <string name="title_pass_olvidada"><u>¿Has olvidado tu contraseña? <b>Pulsa aquí</b></u></string>
    <string name="title_wait">Por favor espere…</string>
    <string name="title_carga">Cargando Datos</string>
    <string name="title_menu_usuario">Usuario</string>
    <string name="title_cerrar_sesion">Cerrar Sesión</string>
    <string name="title_cambiar_pass">Cambiar Contraseña</string>
    <string name="title_baja">Dar de Baja</string>
    <string name="title_nueva_pass">Nueva Contraseña</string>

    <!-- TYPE PARA LOCALIZAR QUE PHP ABRIR -->
    <string name="type_login" translatable="false">login</string>
    <string name="type_registro" translatable="false">registro</string>
    <string name="type_pass" translatable="false">password</string>
    <string name="type_clasificacion" translatable="false">clasificacion</string>
    <string name="type_jornada" translatable="false">jornada</string>
    <string name="type_fav" translatable="false">fav</string>
    <string name="type_cambiar_pass" translatable="false">cambiapass</string>
    <string name="type_baja" translatable="false">baja</string>

    <!-- MENSAJES TRAIDOS DE LA BASE DE DATOS -->
        <!-- FAILS -->
    <string name="conn_fail" translatable="false">CONNECT FAIL</string>
    <string name="login_fail" translatable="false">LOGIN FAIL</string>
    <string name="registro_fail" translatable="false">REGISTRO FAIL</string>
    <string name="email_fail" translatable="false">EMAIL FAIL</string>
    <string name="clasificacion_fail" translatable="false">CLASIFICACION FAIL</string>
    <string name="fav_ins_fail" translatable="false">FAVORITO INSERTADO FAIL</string>
    <string name="fav_del_fail" translatable="false">FAVORITO ELIMINADO FAIL</string>
    <string name="jornada_fail" translatable="false">JORNADA FAIL</string>
    <string name="cambio_fail" translatable="false">CAMBIO FAILS</string>
    <string name="baja_fail" translatable="false">BAJA FAIL</string>
        <!-- OKS -->
    <string name="login_ok" translatable="false">LOGIN OK</string>
    <string name="conn_ok" translatable="false">CONNECT OK</string>
    <string name="registro_ok" translatable="false">REGISTRO OK</string>
    <string name="fav_del_ok" translatable="false">FAVORITO ELIMINADO OK</string>
    <string name="fav_ins_ok" translatable="false">FAVORITO INSERTADO OK</string>
    <string name="cambio_ok" translatable="false">CAMBIO OK</string>
    <string name="baja_ok" translatable="false">BAJA OK</string>

    <!-- TEXTO A MOSTRAR EN LA PANTALLA PRINCIPAL -->
    <string name="nombre">NOMBRE</string>
    <string name="partidos_jugados">PJ</string>
    <string name="partidos_ganados">PG</string>
    <string name="partidos_empatados">PE</string>
    <string name="partidos_perdidos">PP</string>
    <string name="goles_favor">GF</string>
    <string name="goles_contra">GC</string>
    <string name="goles_diferencia">GD</string>
    <string name="puntos" translatable="false">P</string>
    <string name="item_clasificacion">Clasificación</string>
    <string name="item_jornada">Jornadas</string>
    <string name="item_equipos">Equipos</string>
    <string name="item_noticias">Noticias</string>
    <string name="barcelona" translatable="false">FCB</string>
    <string name="at_madrid" translatable="false">ATM</string>
    <string name="levante" translatable="false">LUD</string>
    <string name="deportivo" translatable="false">DEP</string>
    <string name="at_bilbao" translatable="false">ATH</string>
    <string name="sociedad" translatable="false">RSO</string>
    <string name="logrono" translatable="false">EDF</string>
    <string name="rayo" translatable="false">RVM</string>
    <string name="tenerife" translatable="false">UDG</string>
    <string name="tacones" translatable="false">TAC</string>
    <string name="sevilla" translatable="false">SFC</string>
    <string name="betis" translatable="false">RBB</string>
    <string name="madrid" translatable="false">MAD</string>
    <string name="sporting" translatable="false">SPH</string>
    <string name="valencia" translatable="false">VCF</string>
    <string name="espanyol" translatable="false">ESP</string>
    <string name="separador" translatable="false">-</string>
    <string name="suspendido">SUSP</string>
    <string name="posicion">Posición:</string>
    <string name="puntos_equipo">Puntos:</string>

    <!-- OTROS -->
    <string name="descripcion_logo">Logo FutFemApp</string>
    <string name="EMAIL_PATTERN" translatable="false">^[_a-z0-9-]+(\\.[_a-z0-9-]+)*@[a-z0-9-]+(\\.[a-z0-9-]+)*(\\.[a-z]{2,4})$</string>
    <string name="app_name" translatable="false">FutFemApp</string>
    <string name="equipo_vis" translatable="false">icono equipo visitante</string>
    <string name="equipo_loc" translatable="false">icono del equipo visitante</string>
    <string name="pass_cambiada">Contraseña Cambiada Correctamente</string>
    <string name="dar_baja">¿Seguro que desea darse de baja?</string>

    <!-- BOTONES DIALOG -->
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
</resources>
