<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/negro"
    tools:context=".ui.LoginActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/descripcion_logo"
            android:foregroundGravity="center"
            app:srcCompat="@mipmap/ic_logol_foreground" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idErrorUsPass"
            android:text=""
            android:gravity="center"
            android:textColor="@color/rojoError"
            android:textStyle="bold"
            android:visibility="invisible"
            android:textSize="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/violeta"
            android:theme="@style/AppTheme.FloatingLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/violeta"
                android:focusable="true"
                android:hint="@string/title_usuario"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/violeta"
                android:textColorHint="@color/violeta"
                android:theme="@style/EditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.FloatingLabel"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/violeta"
            android:id="@+id/idLayoutPass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/violeta"
                android:focusable="true"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/violeta"
                android:textColorHint="@color/violeta"
                android:theme="@style/EditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.FloatingLabel"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/violeta"
            android:visibility="gone"
            android:id="@+id/idLayoutPassRepeat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/violeta"
                android:focusable="true"
                android:hint="@string/title_pass_repeat"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/violeta"
                android:textColorHint="@color/violeta"
                android:theme="@style/EditText"
                android:visibility="gone"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/idBtnLogin"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_estilos"
            android:focusable="true"
            android:text="@string/boton_login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/violetaOscuro"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/idBtnRegistrarse"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_estilos"
            android:focusable="true"
            android:text="@string/boton_registro"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/violetaOscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <Button
            android:id="@+id/idBtnRecordarPass"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_estilos"
            android:focusable="true"
            android:text="@string/boton_recordar_pass"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/violetaOscuro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/idRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_registro"
            android:textColor="@color/violeta"
            android:focusable="true"/>
        <TextView
            android:id="@+id/idLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_login"
            android:textColor="@color/violeta"
            android:visibility="gone"
            android:focusable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idPassOlvidada"
            android:text="@string/title_pass_olvidada"
            android:gravity="center"
            android:textColor="@color/violeta"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="70dp" />
    </LinearLayout>

</LinearLayout>